--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-cli": "^1.1.28",
     "gatsby-image": "^1.0.31",
     "gatsby-link": "^1.6.32",
+    "gatsby-plugin-fastclick": "^1.0.1",
     "gatsby-plugin-google-analytics": "^1.0.15",
     "gatsby-plugin-netlify": "^1.0.12",
     "gatsby-plugin-nprogress": "^1.0.9",
