--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-nprogress": "^1.0.10",
     "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-plugin-react-next": "^1.0.7",
+    "gatsby-plugin-remove-trailing-slashes": "^1.0.4",
     "gatsby-plugin-sass": "^1.0.15",
     "gatsby-plugin-styled-components": "^2.0.4",
     "gatsby-source-contentful": "^1.3.32",
@@ -32,7 +33,7 @@
     "react-tabs": "^2.2.1",
     "scrollprogress": "^3.0.2",
     "smoothscroll-polyfill": "^0.4.0",
-    "styled-components": "^2.4.0",
+    "styled-components": "^3.0.2",
     "whatwg-fetch": "^2.0.3"
   },
   "keywords": [
